# ipyflow

./: .gitignore  .readthedocs.yml  HISTORY.rst  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  deploy-jupyterlite.yml
core/: setup.cfg
core/ipyflow/: __init__.py  comm_manager.py  config.py  flow.py  frontend.py  line_magics.py  models.py
core/ipyflow/analysis/: live_refs.py  resolved_symbols.py  symbol_ref.py
core/ipyflow/api/: cells.py
core/ipyflow/data_model/: cell.py  namespace.py  scope.py  statement.py  symbol.py  timestamp.py
core/ipyflow/pyccolo/: __init__.py
core/ipyflow/shell/: __init__.py  interactiveshell.py
core/ipyflow/slicing/: mixin.py
core/test/: composition_tracer.py  test_dynamic_slicing.py  test_frontend_checker.py  test_pipescript_integration.py  test_pyccolo_composition.py  test_reactivity.py  test_stability.py  test_staleness_propagation.py
docs/: conf.py  index.rst
docs/_ext/: ipyflow_cells.py  ipyflow_doctest.py
docs/_static/: custom.css
docs/concepts/: dataflow_model.rst  slicing.rst
docs/getting_started/: first_notebook.rst  installation.rst  reactive_notebooks.rst
docs/guides/: dataflow_api.rst  execution.rst  introspection_api.rst  memoization.rst  reactive_execution.rst
docs/reference/: api.rst  config.rst  data_model.rst  flow_magic.rst  models.rst
frontend/labextension/: eslint.config.js  package-lock.json  package.json
jupyterlite/: .gitignore  README.md  build.sh
jupyterlite/content/: demo.ipynb
scripts/: build.sh  deploy-all.sh
(+24 files in other folders)
