# this section just here to allow for editable install
[versioneer]
VCS = git
style = pep440
versionfile_source = core/ipyflow/_version.py
versionfile_build = core/ipyflow/_version.py
tag_prefix =
parentdir_prefix = ipyflow-

[metadata]
description_file = README.md

[bdist_wheel]
universal = 1

# Use a path-based (.pth) editable install instead of setuptools' default
# import-hook editable mode, which mypy cannot follow statically -- it would
# treat this package as untyped and hide type errors that only surface in CI.
# (pyproject's [tool.distutils.editable_wheel] is ignored for setup.cfg-based
# projects, so the option lives here.) Honored by any frontend: pip, uv, etc.
[editable_wheel]
mode = compat
